--- a/my-app/src/App/styles/serverCard/cardElements.scss
+++ b/my-app/src/App/styles/serverCard/cardElements.scss
@@ -8,6 +8,7 @@
   width: 300px;
   height: 50px;
   background-color: #1D2023;
+  margin-bottom: -1px;
 }
 .server-card-button-start {
   display: flex;
@@ -16,14 +17,23 @@
   border-radius: 7px;
   width: 130px;
   height: 30px;
-  background-color: #439A57;
+  background-color: #3BA55C;
   margin-left: 15px;
   cursor: pointer;
   color: aliceblue;
   font-size: 15pt;
   justify-content: center;
   align-items: center;
+  transition: 0.15s;
 }
+.server-card-button-start:hover {
+  transition: 0.15s;
+  width: 150px;
+  height: 35px;
+  background-color: #378750;
+  cursor: pointer;
+}
+
 .server-card-button-close {
   display: flex;
   outline: none;
@@ -38,4 +48,30 @@
   font-size: 15pt;
   justify-content: center;
   align-items: center;
+  transition: 0.15s;
+}
+
+.server-card-button-close:hover {
+  animation: shake 0.52s cubic-bezier(.36,.07,.19,.97) both;
+  transform: translate3d(0,0,0);
+  transition: 0.15s;
+  width: 130px;
+  height: 30px;
+  background-color: #854645;
+  cursor: pointer;
+}
+
+@keyframes shake {
+  10%, 90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+  20%, 80% {
+    transform: translate3d(2px, 0, 0);
+  }
+  30%, 50%, 70% {
+    transform: translate3d(-2px, 0, 0);
+  }
+  40%, 60% {
+    transform: translate3d(2px, 0, 0);
+  }
 }
