--- a/my-app/src/styles/App.scss
+++ b/my-app/src/styles/App.scss
@@ -1,8 +1,8 @@
-@import url('./App/styles/serverCard/cardElements.scss');
-@import url('./App/styles/serverCard/mainCard.scss');
-@import url('./App/styles/header.scss');
-@import url('./App/styles/sideBar.scss');
-@import url('./App/styles/accountCard.scss');
+@import url('./serverCard/cardElements.scss');
+@import url('./serverCard/mainCard.scss');
+@import url('./header.scss');
+@import url('./sideBar.scss');
+@import url('./accountCard.scss');
 
 *{
   box-sizing: border-box;
