--- a/my-app/src/styles/accountCard.scss
+++ b/my-app/src/styles/accountCard.scss
@@ -31,7 +31,7 @@
 .accountCard-Avatar {
   height: 100%;
   width: 100%;
-  background-image: url('../../../images/cube.svg');
+  background-image: url('../images/cube.svg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: 40px;
