--- a/my-app/src/styles/sideBar.scss
+++ b/my-app/src/styles/sideBar.scss
@@ -16,7 +16,7 @@
 }
 .sidebar-homeLogo {
   margin-top: 10px;
-  background-image: url('../../../images/cube.svg');
+  background-image: url('../images/cube.svg');
   background-size: 40px;
   background-position: center;
   background-repeat: no-repeat;
@@ -66,7 +66,7 @@
 }
 
 .sidebar-Element1 {
-  background-image: url('../../../images/Data_bank.svg');
+  background-image: url('../images/Data_bank.svg');
   background-size: 50px;
   background-position: center;
   background-repeat: no-repeat;
@@ -80,7 +80,7 @@
 
 
 .sidebar-Element2 {
-  background-image: url('../../../images/Group_light.svg');
+  background-image: url('../images/Group_light.svg');
   background-size: 50px;
   background-position: center;
   background-repeat: no-repeat;
@@ -94,7 +94,7 @@
 
 
 .sidebar-Element3 {
-  background-image: url('../../../images/User_alt_light.svg');
+  background-image: url('../images/User_alt_light.svg');
   background-size: 50px;
   background-position: center;
   background-repeat: no-repeat;
@@ -108,7 +108,7 @@
 
 
 .sidebar-Element4 {
-  background-image: url('../../../images/Setting_line_light.svg');
+  background-image: url('../images/Setting_line_light.svg');
   background-size: 45px;
   background-position: center;
   background-repeat: no-repeat;
@@ -122,7 +122,7 @@
 
 
 .sidebar-Element5 {
-  background-image: url('../../../images/Sign_out_circle_duotone_line.svg');
+  background-image: url('../images/Sign_out_circle_duotone_line.svg');
   background-size: 45px;
   background-position: center;
   background-repeat: no-repeat;
