--- a/my-app/src/styles/serverCard/cardElements.scss
+++ b/my-app/src/styles/serverCard/cardElements.scss
@@ -9,6 +9,7 @@
   height: 50px;
   background-color: #1D2023;
   margin-bottom: -1px;
+  overflow-x: hidden;
 }
 .server-card-button-start {
   display: flex;
