--- a/my-app/src/styles/header.scss
+++ b/my-app/src/styles/header.scss
@@ -8,14 +8,9 @@
   background-color: #202225;
   -webkit-user-select: none;
   -webkit-app-region: drag;
+  overflow-y: hidden;
 }
 .header-title {
-  display: flex;
-  position: absolute;
-  border-radius: 0px 0px 15px 0px;
-  background-color: transparent;
-  font-style: normal;
-  font-family: Arial, Helvetica, sans-serif;
   font-size: 9pt;
   font-weight: 800;
   margin-left: 5px;
