--- a/my-app/src/styles/serverCard/mainCard.scss
+++ b/my-app/src/styles/serverCard/mainCard.scss
@@ -1,6 +1,10 @@
 span {
   color: aliceblue;
-  background: transparent;
+  background: rgba(50, 48, 48, 0.865);
+  border-radius: 50px;
+  width: auto;
+  padding: 0px 10px 0px 10px;
+  text-align: center;
   font-size: 18pt;
   margin-top: 20px;
   font-family: Arial, Helvetica, sans-serif;
@@ -9,9 +13,8 @@ span {
 .server-card-1 {
   display: flex;
   flex-direction: column;
-  position: absolute;
+  height: 190px;
   width: 300px;
-  height: 200px;
   background-color: #494c53;
   border-radius: 8px;
   justify-content: space-between;
@@ -19,4 +22,5 @@ span {
   background-size: 400px;
   background-position: center;
   background-repeat: no-repeat;
+  overflow-y: hidden;
 }
