--- a/my-app/public/updaterStyle.css
+++ b/my-app/public/updaterStyle.css
@@ -1,5 +1,7 @@
 *{
   background-color: #2F3136;
+  padding: 0;
+  margin: 0;
 }
 
 .root-updater {
@@ -9,6 +11,8 @@
   flex-direction: column;
   align-items: center;
   flex-wrap: nowrap;
+  border: 2px solid;
+  border-color: #222324;
 }
 
 .content {
@@ -16,9 +20,12 @@
   position: absolute;
   top: 50%;
   transform: translate(0, -50%);
+  padding: 0px;
+  margin: 0px;
 }
 
 h1 {
+  font-size: 21pt;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
   color: aliceblue;
