--- a/my-app/src/styles/App.scss
+++ b/my-app/src/styles/App.scss
@@ -1,13 +1,9 @@
-@import url('./serverCard/cardElements.scss');
-@import url('./serverCard/mainCard.scss');
 @import url('./header.scss');
-@import url('./sideBar.scss');
-@import url('./accountCard.scss');
 
 *{
   box-sizing: border-box;
   overflow-x: hidden;
-  //overflow-y: hidden;
+  overflow-y: hidden;
 }
 body {
   margin: 0;
@@ -15,30 +11,7 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  background-color: #2F3136;
-  color: rgb(94, 94, 94);
-  
+  background-color: #2B2E39;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: transparent;
-}
-
-.content {
-  width: 100%;
-  height: 96.9vh;
-  display: flex;
-  position: relative;
-  align-content: space-between;
-  justify-content: space-between;
-  flex-direction: column;
-  background-color: #2b2d30;
-}
-
-.servers {
-  display: grid;
-  position: fixed;
-  left: 90px;
-  top: 35px;
-  grid-template-rows: repeat(3, 200px);
-  grid-column-gap: 20px;
-  grid-row-gap: 5px;
 }
