--- a/my-app/src/styles/header.scss
+++ b/my-app/src/styles/header.scss
@@ -5,19 +5,20 @@
   display: flex;
   position: relative;
   align-items: center;
-  background-color: #202225;
+  background-color: #202224;
   -webkit-user-select: none;
   -webkit-app-region: drag;
   overflow-y: hidden;
 }
 .header-title {
+  color: #8D8D8D;
   font-size: 9pt;
   font-weight: 800;
   margin-left: 5px;
 }
 
 .header-title-page {
-  color: rgb(202, 202, 202);
+  color: #CACACA;
   display: flex;
   position: absolute;
   translate: -50%;
@@ -36,7 +37,7 @@
  right: 0px;
  align-items: center;
  height: 25px;
- width: 45px;
+ width: 50px;
  cursor: pointer;
  background-color: transparent;
 }
@@ -44,31 +45,30 @@
 .header-buttons-container > button {
   display: flex;
   z-index: 1;
-  height: 15px;
-  width: 15px;
+  height: 16px;
+  width: 16px;
   border: none;
   outline: none;
   cursor: pointer;
-  border-radius: 15px;
-  margin: 3px;
+  background-color: transparent;
+  margin: 5px;
+  border-radius: 5px;
   -webkit-app-region: no-drag;
 }
 .header-button-minimize {
- background-color: rgb(222, 195, 76);
- -webkit-app-region: no-drag;
+ background-image: url('../images/MinimizeBtn.svg');
  transition: 0.2s;
 }
 .header-button-exit {
- background-color: rgb(222, 76, 76);
- -webkit-app-region: no-drag;
+  background-image: url('../images/closeBtn.svg');
  transition: 0.2s;
 }
 
 .header-button-minimize:hover {
-  background-color: rgb(171, 154, 76);
+  background-color: rgb(70, 53, 37);
   transition: 0.2s;
 }
 .header-button-exit:hover {
-  background-color: rgb(165, 71, 71);
+  background-color: rgb(79, 43, 43);
   transition: 0.2s;
 }
