--- a/my-app/src/styles/App.scss
+++ b/my-app/src/styles/App.scss
@@ -1,6 +1,5 @@
 @import url('./header.scss');
-@import url('./sideBar.scss');
-@import url('./content.scss');
+@import url('./MainContent.scss');
 
 *{
   box-sizing: border-box;
@@ -16,22 +15,4 @@ body {
   background-color: #2B2E39;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: transparent;
-}
-
-.mainView {
-  display: flex;
-}
-
-.left-content {
-  display: flex;
-  flex-direction: column;
-  width: 195px;
-  margin: 10px 5px 10px 10px;
-}
-
-.right-content {
-  display: flex;
-  flex-direction: column;
-  width: 830px;
-  margin: 10px 10px 10px 5px;
 }
