--- a/my-app/src/styles/MainContent.scss
+++ b/my-app/src/styles/MainContent.scss
@@ -7,7 +7,7 @@
 .left-content {
   display: flex;
   flex-direction: column;
-  max-width: 195px;
+  max-width: 220px;
   width: 100%;
   margin: 10px 5px 10px 10px;
   justify-content: space-between;
@@ -16,10 +16,12 @@
 .right-content {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+
   max-width: 100%;
   width: 100%;
   margin: 10px 10px 10px 5px;
-  justify-content: space-between;
 }
 
 
@@ -29,6 +31,9 @@
 .sideBar {
   display: flex;
   flex-direction: column;
+  //justify-content: center;
+  align-items: center;
+  padding: 5px 0px 5px 0px;
 
   width: 100%;
   height: 100%;
@@ -40,6 +45,9 @@
 
 .account-Card {
   display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 
   width: 100%;
   height: 100%;
@@ -48,6 +56,34 @@
 
   background: #202224;
   border-radius: 8px;
+}
+
+.account-Avatar {
+  height: 40px;
+  width: 40px;
+  margin: 5px;
+  
+  background-image: url('../images/closeBtn.svg');
+  background-position: center;
+  border: 3px solid;
+  border-color: #4c647b;
+  border-radius: 25px;
+}
+
+.account-Nickname {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  height: 32px;
+  width: 75%;
+  
+  text-align: center;
+  font-family: 'Arial';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 12px;
+  color: aliceblue;
 }
 
 
@@ -70,28 +106,134 @@
 
   width: 100%;
   height: 100%;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   
   background: #202224;
   border-radius: 8px;
+}
+
+.StartGame-Button {
+  align-items: center;
+  justify-content: center;
+  display: flex;
+
+  max-width: 275px;
+  width: 275px;
+  height: 65px;
+  margin-bottom: 20px;
+  
+  
+  //background: #468c6b;
+  background: rgb(41, 112, 82);
+  border-radius: 8px;
+  border: 3px solid;
+  //border-color: rgb(31, 88, 63);
+  border-color: #468c6b;
+  transition: 0.3s;
+
+  color: aliceblue;
+  font-weight: 700;
+  font-size: 21pt;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+}
+
+.StartGame-Button:hover {
+  //background: rgb(31, 88, 63);
+  background: #468c6b;
+  border-radius: 15px;
+  border: 3px solid;
+  //border-color: #468c6b;
+  border-color: rgb(31, 88, 63);
+  transition: 0.3s;
+  color: rgb(231, 228, 227);
 }
 
 
 // // // // // // // // // // // //
 
 
-.cardServer-Idle {
-  outline: none;
-  border: none;
-  margin: 9px;
-  min-height: 50px;
+.cardServer {
+  display: flex;
+  flex-direction: row;
+  width: 90%;
 
+  margin: 5px 0px 5px 0px;
+  height: 50px;
+  
   background: #2B2E39;
   border-radius: 8px;
   transition: 0.5s;
+  outline: none;
+  border: none;
+  align-items: center;
 }
 
-.cardServer-Idle:hover {
+.cardServer-left {
+  display: flex;
+  flex-direction: column;
+  height: 50px;
+  width: 70%;
+}
+
+.cardServer-NameServer-Container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.cardServer-right {
+  display: flex;
+  width: 40px;
+  height: 40px;
+
+  margin-left: 15px;
+  background-color: #468c6b;
+  border-radius: 5px;
+}
+
+.cardServer:hover {
   background: #3f465f;
   transition: 0.5s;
+}
+
+.cardServer-NameServer {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  color: #B998FF;
+  font-weight: 700;
+  font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  margin-bottom: 5px;
+}
+
+.cardServer-left-Information {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.cardServer-GameVersion {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  color: #BFA6CB;
+  font-weight: 700;
+  font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+}
+
+.cardServer-GameOnline {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  color: #ADADAD;
+  font-weight: 700;
+  font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
 }
