--- a/my-app/src/styles/MainContent.scss
+++ b/my-app/src/styles/MainContent.scss
@@ -22,6 +22,7 @@
   max-width: 100%;
   width: 100%;
   margin: 10px 10px 10px 5px;
+  transition: 0.3s;
 }
 
 a{
@@ -95,6 +96,7 @@ a{
 
 .HeaderServer-Content {
   display: flex;
+  flex-direction: row;
   
   width: 100%;
   height: 100%;
@@ -109,7 +111,51 @@ a{
   font-weight: 600;
   font-size: 12pt;
   text-align: left;
-  padding: 10px;
+  align-items: center;
+}
+
+.HeaderServer-Content-Left {
+  color: aliceblue;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 700;
+  font-size: 16pt;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 10px;
+  width: 50%;
+  height: 100%;
+}
+
+.NameServer-Header{
+  display: flex;
+  color: #B998FF;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 700;
+  font-size: 22pt;
+  align-items: center;
+}
+
+.HeaderServer-Content-Right {
+  color: aliceblue;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 700;
+  font-size: 16pt;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: end;
+  margin-right: 10px;
+  width: 50%;
+  height: 100%;
+}
+
+.OnlineServer-Header{
+  display: flex;
+  color: #B998FF;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 700;
+  font-size: 22pt;
   align-items: center;
 }
 
@@ -237,7 +283,7 @@ a{
   height: 40px;
 
   margin-right: 10px;
-  background-size: 40px;
+  background-size: auto;
   background-position: center;
   background-repeat: no-repeat;
   border-radius: 0px;
