--- a/my-app/src/styles/MainContent.scss
+++ b/my-app/src/styles/MainContent.scss
@@ -144,7 +144,7 @@ a{
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: end;
+  align-items: flex-end;
   margin-right: 10px;
   width: 50%;
   height: 100%;
