--- a/my-app/src/styles/App.scss
+++ b/my-app/src/styles/App.scss
@@ -1,5 +1,6 @@
 @import url('./header.scss');
 @import url('./MainContent.scss');
+@import url('./LaunchGameView.scss');
 
 *{
   box-sizing: border-box;
