--- a/my-app/src/styles/header.scss
+++ b/my-app/src/styles/header.scss
@@ -11,7 +11,7 @@
   overflow-y: hidden;
 }
 .header-title {
-  color: #8D8D8D;
+  color: #373737;
   font-size: 9pt;
   font-weight: 800;
   margin-left: 5px;
@@ -37,7 +37,7 @@
  right: 0px;
  align-items: center;
  height: 25px;
- width: 50px;
+ width: 42px;
  cursor: pointer;
  background-color: transparent;
 }
@@ -45,15 +45,17 @@
 .header-buttons-container > button {
   display: flex;
   z-index: 1;
-  height: 16px;
-  width: 16px;
+  height: 20px;
+  width: 20px;
   border: none;
   outline: none;
   cursor: pointer;
-  background-color: transparent;
-  margin: 5px;
   border-radius: 5px;
   -webkit-app-region: no-drag;
+  background-color: transparent;
+  background-size: 16px;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 .header-button-minimize {
  background-image: url('../images/MinimizeBtn.svg');
@@ -65,7 +67,7 @@
 }
 
 .header-button-minimize:hover {
-  background-color: rgb(70, 53, 37);
+  background-color: rgb(83, 74, 42);
   transition: 0.2s;
 }
 .header-button-exit:hover {
