--- a/my-app/src/styles/LaunchGameView.scss
+++ b/my-app/src/styles/LaunchGameView.scss
@@ -38,22 +38,68 @@
 }
 
 .Title-Proccess {
-  height: 100%;
+  display: flex;
+  height: auto;
   font-family: Arial, Helvetica, sans-serif;
   color: aliceblue;
   font-size: 25pt;
 }
+.Title-Proccess-2 {
+  display: flex;
+  height: auto;
+  font-family: Arial, Helvetica, sans-serif;
+  color: rgb(56, 56, 56);
+  font-size: 12pt;
+}
 
 .Logs-Proccess {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   height: 100%;
+  width: 100%;
   font-size: 8pt;
 }
 
-.Progress-Bar {
-  height: 25%;
+.Logs-Proccess > textarea:read-only {
   width: 100%;
-  outline: none;
+  height: 100%;
+  margin: 20px;
   border: none;
-  background: #1d1e1f;
-  background-color: #1d1e1f;
+  resize: none;
+  outline: none;
+  border-radius: 10px;
+  background-color: rgb(44, 48, 56);
+  padding: 10px;
+  color: aliceblue;
+  font-size: 13px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 100;
+}
+
+.Logs-Proccess > h1 {
+  margin: 10px 0 0 0;
+  display: flex;
+  color: aliceblue;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.Progress-Bar {
+  height: 20px;
+  width: 100%;
+  background-color: rgb(44, 48, 56);
+  border-radius: 10px;
+}
+
+.Progress-Bar-Value {
+  display: flex;
+  width: 0%;
+  height: 100%;
+  border-radius: 10px;
+  color: aliceblue;
+  background-color: rgb(114, 164, 64);
+  align-items: center;
+  padding-left: 6px;
+  padding-top: 2px;
 }
