--- a/my-app/src/styles/LaunchGameView.scss
+++ b/my-app/src/styles/LaunchGameView.scss
@@ -75,6 +75,7 @@
   font-size: 13px;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 100;
+  -webkit-app-region: no-drag;
 }
 
 .Logs-Proccess > h1 {
