--- a/my-app/src/styles/LaunchGameView.scss
+++ b/my-app/src/styles/LaunchGameView.scss
@@ -46,15 +46,18 @@
 }
 .Title-Proccess-2 {
   display: flex;
-  height: auto;
-  font-family: Arial, Helvetica, sans-serif;
-  color: rgb(56, 56, 56);
-  font-size: 12pt;
+  height: 100%;
+  width: 100%;
+  background-image: url('../images/Frame.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100px;
 }
 
 .Logs-Proccess {
   display: flex;
   flex-direction: column;
+  justify-content: flex-end;
   align-items: center;
   height: 100%;
   width: 100%;
@@ -64,7 +67,7 @@
 .Logs-Proccess > textarea:read-only {
   width: 100%;
   height: 100%;
-  margin: 20px;
+  margin: 0px 20px 20px 20px;
   border: none;
   resize: none;
   outline: none;
