--- a/my-app/public/updaterStyle.css
+++ b/my-app/public/updaterStyle.css
@@ -1,34 +1,38 @@
 *{
   background-color: #2F3136;
   padding: 0;
-  margin: 0;
+  margin: 5px;
   overflow-x: hidden;
   overflow-y: hidden;
 }
 
 .root-updater {
   display: flex;
-  width: 100%;
-  height: 100%;
-  flex-direction: column;
+  position: fixed;
+  justify-content: center;
   align-items: center;
-  flex-wrap: nowrap;
-  border: 2px solid;
+  width: 560px;
+  height: 180px;
+  border: 4px solid;
   border-color: #222324;
 }
 
-.content {
+.img {
+  z-index: -1;
   display: flex;
-  position: absolute;
-  top: 50%;
-  transform: translate(0, -50%);
-  padding: 0px;
-  margin: 0px;
+  position: fixed;
+  width: 154px;
+  height: 154px;
+  background-image: url('./logo.svg');
+  background-size: 154px;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 h1 {
-  font-size: 21pt;
+  font-size: 24pt;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
   color: aliceblue;
+  background-color: transparent;
 }
