--- a/my-app/src/styles/LaunchGameView.scss
+++ b/my-app/src/styles/LaunchGameView.scss
@@ -48,10 +48,11 @@
   display: flex;
   height: 100%;
   width: 100%;
-  background-image: url('../images/Frame.svg');
+  background-image: url('../images/logo.svg');
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 100px;
+  background-size: 160px;
+  animation: scale-up-center 0.4s cubic-bezier(0.445, 0.050, 0.550, 0.950) infinite alternate both;
 }
 
 .Logs-Proccess {
@@ -66,7 +67,8 @@
 
 .Logs-Proccess > textarea:read-only {
   width: 100%;
-  height: 100%;
+  height: 12%;
+  text-align: center;
   margin: 0px 20px 20px 20px;
   border: none;
   resize: none;
@@ -75,9 +77,9 @@
   background-color: rgb(44, 48, 56);
   padding: 10px;
   color: aliceblue;
-  font-size: 13px;
+  font-size: 14px;
   font-family: Arial, Helvetica, sans-serif;
-  font-weight: 100;
+  font-weight: 600;
   -webkit-app-region: no-drag;
 }
 
@@ -106,4 +108,18 @@
   align-items: center;
   padding-left: 6px;
   padding-top: 2px;
+}
+
+
+@keyframes scale-up-center {
+  0% {
+    transform: scale(0.95);
+    filter: invert(80%);
+    background-color: transparent;
+  }
+  100% {
+    transform: scale(1);
+    filter: invert(70%);
+    background-color: transparent;
+  }
 }
