--- a/my-app/src/styles/LaunchGameView.scss
+++ b/my-app/src/styles/LaunchGameView.scss
@@ -67,7 +67,7 @@
 
 .Logs-Proccess > textarea:read-only {
   width: 100%;
-  height: 12%;
+  height: 35px;
   text-align: center;
   margin: 0px 20px 20px 20px;
   border: none;
@@ -108,6 +108,7 @@
   align-items: center;
   padding-left: 6px;
   padding-top: 2px;
+  transition: 0.2s;
 }
 
 
