--- a/my-app/src/styles/MainContent.scss
+++ b/my-app/src/styles/MainContent.scss
@@ -168,12 +168,19 @@ a{
   align-items: center;
 }
 
-.Description-Content {
+.Description-Content:read-only {
   display: flex;
 
   width: 100%;
   height: 100%;
   margin-bottom: 10px;
+
+  border: none;
+  outline: none;
+  resize: none;
+  // -webkit-app-region: no-drag;
+  text-align: center;
+  cursor: default;
   
   background: #202224;
   border-radius: 8px;
@@ -182,7 +189,6 @@ a{
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 600;
   font-size: 13pt;
-  text-align: left;
   padding: 10px;
 }
 
